# esp32-cmake

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  sdkconfig
.github/workflows/: test.yaml
Components/: CMakeLists.txt
Components/Logger/: CMakeLists.txt
Components/Logger/Include/: ILogger.h  Message.h
Components/Logger/Source/: CMakeLists.txt  Logger.cpp  Logger.h
Components/Logger/Test/: CMakeLists.txt  LoggerTest.cpp
Components/Thread/: CMakeLists.txt
Components/Thread/Include/: IThread.h
Components/Thread/Mocks/: CMakeLists.txt  Thread.cpp  Thread.h
Components/Thread/Source/: CMakeLists.txt  Thread.cpp  Thread.h
Tools/: flash.py  monitor.py
